syntax = "proto3";
package scheduleproto;

option go_package = "https://github.com/EBichuk/schedule-app/proto;grpc_service";

service UserService {
    rpc GetScheduleById(ScheduleRequest) returns (ScheduleTimeResponce);
    rpc GetSchedulesByUser(UserRequest) returns (SchedulesIDPesponce);
    rpc CreateSchedule(CreateScheduleRequest) returns (ScheduleResponce);
    rpc NextTaking(UserRequest) returns (SchedulesResponce);
}

message ScheduleRequest {
    int64 schedule_id = 1;
    int64 user_id = 2;
}

message ScheduleTimeResponce {
    int64 schedule_id = 1;
    string name_medication = 2;
    int64 medication_per_day = 3;
    repeated string schedule = 4; 
} 

message UserRequest {
    int64 user_id = 1;
}

message SchedulesIDPesponce {
    repeated int64 schedules = 1;
}

message CreateScheduleRequest {
    int64 user_id = 1;
    string name_medication = 2;
    int64 medication_per_day = 3;
    int64 duration_medication = 4;
} 

message ScheduleResponce {
    int64 schedule_id = 1;
    int64 user_id = 2;
    string name_medication = 3;
    int64 medication_per_day = 4;
    int64 duration_medication = 5;
} 

message SchedulesResponce {
    repeated ScheduleTimeResponce next_schedule = 1;
}